--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
             <h1>RIYANDA SINAMBELA<span>.</span></h1>
             <p>MY PORTOFOLIO</p>
-            <img src="/images/kartun2bg.png" alt="" />
+            <img src="images/kartun2bg.png" alt="" />
         </div>
     </main>
 
