--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
             <h2>My Project</h2>
             <div class="slider-container">
                 <div class="slider-item fade">
-                    <img src="/images/1.png" alt="" />
+                    <img src="images/1.png" alt="" />
                     <p>Project 1</p>
                 </div>
 
                 <div class="slider-item fade">
-                    <img src="/images/2.png" alt="" />
+                    <img src="images/2.png" alt="" />
                     <p>Project 2</p>
                 </div>
 
                 <div class="slider-item fade">
-                    <img src="/images/3.png" alt="" />
+                    <img src="images/3.png" alt="" />
                     <p>Project 3</p>
                 </div>
 
